# TestProject

./: CMakeLists.txt  README.md
include/: BinPackingAlgorithm.h  Container.h  Item.h  Utils.h
src/: BinPackingAlgorithm.cpp  Container.cpp  Item.cpp  Utils.cpp  main.cpp
